# 6-sem-ML-dz-6

./: .gitignore  pyproject.toml
src/: config.py  discriminator.py  generator.py  training.py
